--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			color:#fcf532;
 		}
 		body{
-			background: url("C:/Users/Nasseugfifi/Pictures/IMG_1147.JPG");
+			background: url("http://wallpapercave.com/wp/WTua8KM.jpg");
 			background-position:center;
 			background-size: cover;
 			text-align: center;
