--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<title>Guessan G. Effi</title>
 	<style>
-		#sizing{
-			width:200px;
-			height:200px;
-		}
-		.line-color{
-			color:#fcf532;
-		}
 		body{
 			background: url("http://wallpapercave.com/wp/WTua8KM.jpg");
 			background-position:center;
 			background-size: cover;
 			text-align: center;
 			font-family: 'Roboto', sans-serif;
-			color: black;
+			color: #de621f;
+		}
+		.line-color{
+			color:#de621f;
+		}
+		#sizing{
+			width:200px;
+			height:200px;
 		}
 		.table-background{
 			background-color: white;
 
-		}
+		}	
 		table{
 			color: black;
 			border-collapse: collapse;
@@ -34,7 +34,7 @@
     		padding-left: 225px;
     		padding-right: 225px;
 			width: 900px;
-			background-color:#e2c0c7;
+			background-color:#c763c0;
     	}
 		.image-size{
 			width:180px;
@@ -51,7 +51,7 @@
 		}
 		ul {
       		padding: 10px;
-      		background: #e2c0c7;
+      		background: #700b39;
     	}
     	li {
       		display: inline;
@@ -59,6 +59,7 @@
     	}
 	</style>
 </head>
+
 <body>
 <div class="line-color">
 <header>
@@ -68,37 +69,39 @@
 <img id="sizing" src="https://media.licdn.com/mpr/mpr/shrink_100_100/AAEAAQAAAAAAAAiaAAAAJDBlMjkwODU1LTIxZWQtNDA1NC1hYjVmLWNmZDIzNGZhMzgzYQ.jpg")>
 <h1>Welcome to my page</h1>
 </div>
+
 <h2>Who I am...The reason I belong...</h2>
 <h2>I am studying Mechanical Engineering in college. This semester, in order to save money, I am working full-time. I am dedicated to doing my best in this program. I am reliable, focused and hardworking. I will always do the best that I can. Especially with the pressure and expectation that comes from my Asian father.</h2>
 
 <div class="table-background">
-<table class="table-background" align="center" style="display:inline">
+<table align="center" style="display:inline">
 	<tr>
-		<th><h2>Favorite 5 Movies</h2></th>
+		<th><h2>5 Favorite Movies</h2></th>
 		<th><h2>Rating</h2></th>
 	</tr>
 	<tr>
 		<td><h3>Moonlight</h3></td>
-		<td>10/10</td>
+		<td>10/10 For Narrative</td>
 	</tr>
 	<tr>
 		<td><h3>Legend</h3></td>
-		<td>10/10</td>
+		<td>10/10 For Violence</td>
 	</tr>
 	<tr>
 		<td><h3>Fantastic Mr. Fox</h3></td>
-		<td>10/10</td>
+		<td>10/10 For Stop-Motion Mastery</td>
 	</tr>
 	<tr>
 		<td><h3>Macbeth</h3></td>
-		<td>10/10</td>
+		<td>10/10 For Cinematography during battle</td>
 	</tr>
 	<tr>
 		<td><h3>The Incredibles</h3></td>
-		<td>10/10</td>
+		<td>10/10 For Narrative and Animation</td>
 	</tr>
 </table>
 </div>
+
 <div>
 	<img class="image-size" src="https://1.bp.blogspot.com/-44aO9EF704I/WKm7Z62YgzI/AAAAAAAAavs/7sT3mJjS1E8C8AMLU3ZLgUAxj4OdYemXgCLcB/s320/Moonlight%2B%2528plakat%2529.jpeg">
 	<img class="image-size" src="http://1.bp.blogspot.com/-tY6kFloLsho/VgXixAg1YZI/AAAAAAAACF8/GSRDqNSwTjU/s1600/legend2015.jpg">
@@ -106,10 +109,12 @@
 	<img class="image-size" src="https://upload.wikimedia.org/wikipedia/en/7/79/Macbeth_2015_poster.jpg">
 	<img class="image-size" src="http://needcoffee.cachefly.net/needcoffee/uploads/2005/05/incredibles.jpg">
 </div>
+
 <ul>
   <li><a href="https://github.com/Guessan">My GitHub</a></li>
   <li><a href="https://www.linkedin.com/in/guessan-effi-412a4296/">My LinkedIn</a></li>
   <li><a href="https://www.facebook.com/guessan.effi">My Facebook</a></li>
 </ul>
+
 </body>
 </html>
