--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			background-size: cover;
 			text-align: center;
 			font-family: 'Roboto', sans-serif;
-			color: #de621f;
+			color: black;
 		}
 		.line-color{
 			color:#de621f;
