--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Guessan G. Effi</title>
 	<style>
 		body{
-			background: url("https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Cherry_blossoms_in_Vancouver_3_crop.jpg/220px-Cherry_blossoms_in_Vancouver_3_crop.jpg");
+			background: url("https://c1.staticflickr.com/1/202/448485266_4af81d7b3b_b.jpg");
 			background-position:center;
 			background-size: cover;
 			text-align: center;
