--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Guessan G. Effi</title>
 	<style>
 		body{
-			background: url("https://static1.squarespace.com/static/550c419ae4b071ba19e38484/t/56eba076d51cd40e3a8918cc/1458282617284/448485266_0c93cb4bdb_o.jpg?format=2500w");
+			background: url("http://wallpapercave.com/wp/WTua8KM.jpg");
 			background-position:center;
 			background-size: cover;
 			text-align: center;
