--- a/index.html
+++ b/index.html
@@ -2,74 +2,74 @@
 <html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<title>Guessan G. Effi</title>
-	<style>
-		body{
-			background: url("http://wallpapercave.com/wp/WTua8KM.jpg");
-			background-position:center;
-			background-size: cover;
-			text-align: center;
-			font-family: 'Roboto', sans-serif;
-			color: black;
-		}
-		.line-color{
-			color:#fef65b;
-		}
-		#sizing{
-			width:200px;
-			height:200px;
-		}
-		.table-background{
-			background-color: white;
+<title>Guessan G. Effi</title>
+<style>
+	body{
+		background: url("http://wallpapercave.com/wp/WTua8KM.jpg");
+		background-position:center;
+		background-size: cover;
+		text-align: center;
+		font-family: 'Roboto', sans-serif;
+		color: black;
+	}
+	.line-color{
+		color:#fef65b;
+	}
+	#sizing{
+		width:200px;
+		height:200px;
+	}
+	.table-background{
+		background-color: white;
 
-		}	
-		table{
-			color: black;
-			border-collapse: collapse;
+	}	
+	table{
+		color: black;
+		border-collapse: collapse;
 
-		}
-		td, th {
-    		border: 1px solid #dddddd;
-   		 	text-align: center;
-    		padding-left: 225px;
-    		padding-right: 225px;
-			width: 900px;
-			background-color:#c763c0;
-    	}
-		.image-size{
-			width:180px;
-			height:300px;
-		}
-		div{
-			display:inline;
-		}
-		a{
-			text-align:center;
-		}
-		a:hover{
-			color:#ff0000;
-		}
-		ul {
-      		padding: 10px;
-      		background: #700b39;
-    	}
-    	li {
-      		display: inline;
-      		padding: 0px 10px 0px 10px;
-    	}
-	</style>
+	}
+	td, th {
+		border: 1px solid #dddddd;
+		text-align: center;
+		padding-left: 225px;
+		padding-right: 225px;
+		width: 900px;
+		background-color:#c763c0;
+	}
+	.image-size{
+		width:180px;
+		height:300px;
+	}
+	div{
+		display:inline;
+	}
+	a{
+		text-align:center;
+	}
+	a:hover{
+		color:#ff0000;
+	}
+	ul {
+		padding: 10px;
+		background: #c763c0;
+	}
+	li {
+		display: inline;
+		padding: 0px 10px 0px 10px;
+	}
+</style>
 </head>
 
 <body>
 <div class="line-color">
 <header>
 	<h1>Hello, my name is Guessan ("gaye-sohn") :3</h1>
-    <h1>I am a student</h1>
+	<h1>I am a student</h1>
 </header>
 <img id="sizing" src="https://media.licdn.com/mpr/mpr/shrink_100_100/AAEAAQAAAAAAAAiaAAAAJDBlMjkwODU1LTIxZWQtNDA1NC1hYjVmLWNmZDIzNGZhMzgzYQ.jpg")>
 <h1>Welcome to my page</h1>
 </div>
-
+	
 <h2>Who I am...The reason I belong...</h2>
 <h2>I am studying Mechanical Engineering in college. This semester, in order to save money, I am working full-time. I am dedicated to doing my best in this program. I am reliable, focused and hardworking. I will always do the best that I can. Especially with the pressure and expectation that comes from my Asian father.</h2>
 
