--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 	.line-color{
 		color:#fef65b;
 	}
+	.text-background{
+		background: white;
+		width: 225px;
+		height: 55px;
+	}
 	#sizing{
 		width:200px;
 		height:200px;
