--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
 <img id="sizing" src="https://media.licdn.com/mpr/mpr/shrink_100_100/AAEAAQAAAAAAAAiaAAAAJDBlMjkwODU1LTIxZWQtNDA1NC1hYjVmLWNmZDIzNGZhMzgzYQ.jpg")>
 <h1>Welcome to my page</h1>
 </div>
-	
+
+<div class="text-background">
 <h2>Who I am...The reason I belong...</h2>
 <h2>I am studying Mechanical Engineering in college. This semester, in order to save money, I am working full-time. I am dedicated to doing my best in this program. I am reliable, focused and hardworking. I will always do the best that I can. Especially with the pressure and expectation that comes from my Asian father.</h2>
-
+</div>
+	
 <div class="table-background">
 <table align="center" style="display:inline">
 	<tr>
