--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 	.line-color{
 		color:#fef65b;
 	}
-	.text-background{
-		background: white;
-		width: 225px;
-		height: 55px;
-	}
+	
 	#sizing{
 		width:200px;
 		height:200px;
@@ -61,6 +57,10 @@
 	li {
 		display: inline;
 		padding: 0px 10px 0px 10px;
+	}
+	.text-background{
+		background-color: white;
+		
 	}
 </style>
 </head>
