This is Neeewww

--- a/index.html
+++ b/index.html
@@ -12,22 +12,16 @@
 		font-family: 'Roboto', sans-serif;
 		color: black;
 	}
-	.line-color{
-		color:#fef65b;
-	}
-	
 	#sizing{
 		width:200px;
 		height:200px;
 	}
 	.table-background{
 		background-color: white;
-
 	}	
 	table{
 		color: black;
 		border-collapse: collapse;
-
 	}
 	td, th {
 		border: 1px solid #dddddd;
@@ -58,28 +52,22 @@
 		display: inline;
 		padding: 0px 10px 0px 10px;
 	}
-	.text-background{
-		background-color: white;
-		
-	}
 </style>
 </head>
 
 <body>
-<div class="line-color">
 <header>
-	<h1>Hello, my name is Guessan ("gaye-sohn") :3</h1>
-	<h1>I am a student</h1>
+	<h1 style="background-color: #d3d9e2;">Hello, my name is Guessan ("gaye-sohn") :3</h1>
+	<h1 style="background-color: #d3d9e2;">I am a student</h1>
 </header>
-<img id="sizing" src="https://media.licdn.com/mpr/mpr/shrink_100_100/AAEAAQAAAAAAAAiaAAAAJDBlMjkwODU1LTIxZWQtNDA1NC1hYjVmLWNmZDIzNGZhMzgzYQ.jpg")>
-<h1>Welcome to my page</h1>
-</div>
+<img id="sizing" src="https://media.licdn.com/mpr/mpr/shrink_100_100/AAEAAQAAAAAAAAiaAAAAJDBlMjkwODU1LTIxZWQtNDA1NC1hYjVmLWNmZDIzNGZhMzgzYQ.jpg">
+<h1 style="background-color: #d3d9e2;">Welcome to my page</h1>
 
-<div class="text-background">
-<h2>Who I am...The reason I belong...</h2>
-<h2>I am studying Mechanical Engineering in college. This semester, in order to save money, I am working full-time. I am dedicated to doing my best in this program. I am reliable, focused and hardworking. I will always do the best that I can. Especially with the pressure and expectation that comes from my Asian father.</h2>
-</div>
-	
+<section style="background-color: #d3d9e2;">
+	<h2>Who I am...The reason I belong...</h2>
+	<h2>I am studying Mechanical Engineering in college. This semester, in order to save money, I am working full-time. I am dedicated to doing my best in this program. I am reliable, focused and hardworking. I will always do the best that I can. Especially with the pressure and expectation that comes from my Asian father.</h2>
+</section>	
+
 <div class="table-background">
 <table align="center" style="display:inline">
 	<tr>
